--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,6 +110,7 @@ body.elongated-view {
 }
 
 .search-form input {
+    display: block; /* Ensures the form is displayed */
     border-radius: 5px;
     margin-right: 10px;
 }
@@ -617,3 +618,86 @@ body.elongated-view {
     gap: 1rem;
     width: 600px;
 }
+
+/* Modal styling */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+    align-content: center;
+    text-align: center;
+}
+
+.modal h2 {
+    font-family: "Concert One", sans-serif;
+    color: rgba(0, 82, 0, 0.644);
+    font-weight: 600;
+}
+
+.modal-content {
+    background-color: beige;
+    margin: 10% auto;
+    padding: 20px;
+    border: 2px solid rgba(2, 77, 2, 0.308);
+    border-radius: 10px;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+}
+
+.modal-content form{
+    align-content: center;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
+}
+
+.form-text.text-muted {
+    display: block;
+    font-size: 0.8rem;
+    color: #6c757d;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: 350px;
+    transform: translateX(23%);
+}
+
+.submit-button.btn {
+    background-color: green;
+    padding: 5px 20px;
+    border-radius: 4px;
+    color: aliceblue;
+    border-color: white;
+    outline: none;
+    transition: all 0.25s ease; /* Smooth transition for all properties */
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 10px;
+}
+
+.submit-button.btn:hover {
+    outline: 2px solid white; /* White outline on focus as well, for accessibility */
+    cursor: pointer;
+    background-color: rgba(0, 128, 0, 0.644);
+}
+
+.no-rcp {
+    color: beige;
+}
+
