Add recipe function

--- a/recipes/templates/recipes/recipes_data.html
+++ b/recipes/templates/recipes/recipes_data.html
@@ -27,7 +27,7 @@
                 <div></div>
             </div>
             <div class="menu">
-                <a href="{% url 'recipes:list' %}">Recipes</a>
+                <a href="{% url 'recipes:list' %}">Menu</a>
                 <a href="{% url 'recipes:data' %}">Collection Data</a>
                 <a href="{% url 'logout' %}">Logout</a>
             </div>
