correct naming for container styling

--- a/recipes/templates/recipes/recipes_data.html
+++ b/recipes/templates/recipes/recipes_data.html
@@ -41,7 +41,7 @@
                         <h2 class="main-header-data text-center">Collection Data</h2>
 
                         <!-- DATA CONTENT -->
-                        <div class="container">
+                        <div class="dt-contain">
                             <!-- Sidebar for graph selection -->
 
                             <form method="post" class="chart-selection">
