--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ html, body {
     background-position: center; /* Centers the image */
     background-repeat: repeat-y; /* Prevents the image from repeating */
     z-index: -1;
+    height: 100vh;
 }
 
 body.elongated-view {
@@ -12,7 +13,7 @@ body.elongated-view {
 }
 
 body.compact-view {
-    max-height: 100vh;
+    max-height: 98vh;
 }
 
 /* Navbar Styles */
@@ -344,7 +345,7 @@ body.compact-view {
     gap: 20px;
     padding: 20px;
     border-radius: 10px;
-    width: 2000px; /* Use percentage for flexibility */
+    min-width: 1200px; /* Use percentage for flexibility */
   }
   
   .recipe-card {
@@ -577,9 +578,9 @@ body.compact-view {
     background-color: beige;
     border-radius: 10px;
     border: 2px solid rgba(2, 77, 2, 0.308);
-    min-width: 800px;
-    padding: 20%;
-    max-height: 600px;
+    min-width: 1000px;
+    padding: 10%;
+    max-height: 500px;
 }
 
 .dt-contain button{
@@ -592,7 +593,8 @@ body.compact-view {
 }
 
 .chart-selection {
-    padding-top: 10%;
+    height: 300px;
+    padding: 10%;
     margin-right: 5%;
     background-color: rgba(255, 255, 255, 0.55);
     border-radius: 10px;
@@ -602,6 +604,8 @@ body.compact-view {
 .dt-contain img{
     border-radius: 10px;
     border: 2px solid rgba(2, 77, 2, 0.308);
+    height: 300px;
+    width: 900px;
 }
 
 /* Sidebar styling */
